<resources>
    <string name="app_name">TetrisGame</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="move_left">move left</string>
    <string name="rotate">Rotate</string>
    <string name="move_right">move right</string>
    <string name="score">Score: </string>
    <string name="pause">Pause</string>
    <string name="level">Level: </string>
    <string name="nr_of_shapes">Shapes: </string>
    <string name="start_score_value">0</string>
    <string name="start_level">1</string>
    <string name="start_shapes_number">0</string>
    <string name="next_shape_text">Next:</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again</string>
    <string name="your_score">Your Score:</string>
    <string name="show_latest_scores">Show latest scores</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="play_again">Play again</string>
    <string name="you_won_the_game">You won the game!</string>
    <string name="score_table">Score table</string>
    <string name="welcome">Welcome</string>
    <string name="tetris_game">Tetris game</string>
    <string name="start_game">Start Game</string>
    <string name="date">Date:</string>
    <string name="date_example">24/12/2020 09:50</string>
    <string name="shapes_value">12</string>
</resources>