<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.GameWonFragment">

        <TextView
            android:id="@+id/textView"
            style="@style/titlesStyle"
            android:layout_marginTop="120dp"
            android:text="@string/congratulations"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/YouWonText"
            style="@style/titlesStyle"
            android:layout_marginTop="60dp"
            android:text="@string/you_won_the_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/yourScoreText"
            style="@style/titlesStyle"
            android:layout_marginTop="60dp"
            android:text="@string/your_score"
            app:layout_constraintEnd_toStartOf="@id/score"
            app:layout_constraintStart_toStartOf="@id/YouWonText"
            app:layout_constraintTop_toBottomOf="@+id/YouWonText" />

        <TextView
            android:id="@+id/score"
            style="@style/titlesStyle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/start_score_value"
            app:layout_constraintStart_toEndOf="@+id/yourScoreText"
            app:layout_constraintTop_toBottomOf="@+id/YouWonText" />

        <Button
            android:id="@+id/getScoreTable"
            style="@style/buttonStyle"
            android:layout_marginTop="120dp"
            android:text="@string/show_latest_scores"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourScoreText" />
        <Button
            android:id="@+id/playBtn"
            style="@style/buttonStyle"
            android:layout_marginTop="60dp"
            android:text="@string/play_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getScoreTable" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>