<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.GameOverFragment">

        <TextView
            android:id="@+id/gameOverText"
            style="@style/titlesStyle"
            android:layout_marginTop="120dp"
            android:text="@string/game_over"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/yourScore"
            style="@style/titlesStyle"
            android:layout_marginTop="60dp"
            android:text="@string/your_score"
            app:layout_constraintStart_toStartOf="@id/gameOverText"
            app:layout_constraintTop_toBottomOf="@+id/gameOverText" />

        <TextView
            android:id="@+id/score"
            style="@style/titlesStyle"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:text="@string/start_score_value"
            app:layout_constraintStart_toEndOf="@+id/yourScore"
            app:layout_constraintTop_toBottomOf="@+id/gameOverText" />

        <Button
            android:id="@+id/getLatestScores"
            style="@style/buttonStyle"
            android:layout_marginTop="120dp"
            android:text="@string/show_latest_scores"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yourScore" />

        <Button
            android:id="@+id/startAgainBtn"
            style="@style/buttonStyle"
            android:layout_marginTop="60dp"
            android:text="@string/try_again"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getLatestScores" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>