<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".screens.GameFragment">

        <nl.natalya.tetrisgame.views.PlayingFieldView
            android:id="@+id/drawView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/gray"
            app:layout_constraintBottom_toTopOf="@+id/rotateBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextFigureView">

        </nl.natalya.tetrisgame.views.PlayingFieldView>

        <TextView
            android:id="@+id/points"
            style="@style/gameTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/score"
            app:layout_constraintEnd_toStartOf="@+id/pointsNum"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pointsNum"
            style="@style/gameTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/start_score_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/level"
            style="@style/gameTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/level"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/levelNumber"
            style="@style/gameTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/start_level"
            app:layout_constraintStart_toEndOf="@+id/level"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nrOfShapes"
            style="@style/gameTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:text="@string/nr_of_shapes"
            app:layout_constraintStart_toEndOf="@+id/levelNumber"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/NrShapes"
            style="@style/gameTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/start_shapes_number"
            app:layout_constraintStart_toEndOf="@+id/nrOfShapes"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/next"
            style="@style/gameTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/next_shape_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/level" />

        <nl.natalya.tetrisgame.views.NextView
            android:id="@+id/nextFigureView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/pauseBtn"
            app:layout_constraintStart_toEndOf="@+id/next"
            app:layout_constraintTop_toBottomOf="@+id/nrOfShapes">

        </nl.natalya.tetrisgame.views.NextView>

        <ImageButton
            android:id="@+id/leftBtn"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:padding="15sp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/rotateBtn"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="15sp"
            android:src="@drawable/ic_baseline_rotate_right_24"
            android:text="@string/rotate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/rightBtn"
            app:layout_constraintStart_toEndOf="@+id/leftBtn" />

        <ImageButton
            android:id="@+id/rightBtn"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:padding="15sp"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/drawView" />

        <ImageButton
            android:id="@+id/pauseBtn"
            style="@style/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="15sp"
            android:src="@drawable/ic_baseline_pause_24"
            app:layout_constraintBottom_toBottomOf="@+id/nextFigureView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/points" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>